# test-that

./: CONTRIBUTING.md  Cargo.toml  README.md  run_integration_tests.sh  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml  scorecard.yml
googletest/: Cargo.toml  crate_docs.md
googletest/src/: assertions.rs  description.rs  lib.rs  matcher.rs
googletest/src/matcher_support/: edit_distance.rs
googletest/src/matchers/: all_matcher.rs  any_matcher.rs  anything_matcher.rs  char_count_matcher.rs  conjunction_matcher.rs  container_contains.rs  container_contains_ordered_matcher.rs  container_contains_unordered_matcher.rs  container_eq_matcher.rs  contains_matcher.rs  contains_regex_matcher.rs  disjunction_matcher.rs  display_matcher.rs  each_matcher.rs  elements_are_matcher.rs  empty_matcher.rs  eq_deref_of_matcher.rs  eq_matcher.rs  err_matcher.rs  field_matcher.rs  ge_matcher.rs  gt_matcher.rs  has_entry_matcher.rs  is_encoded_string_matcher.rs  is_matcher.rs  is_nan_matcher.rs  le_matcher.rs  len_matcher.rs  lt_matcher.rs  matches_pattern.rs  matches_regex_matcher.rs  mod.rs  near_matcher.rs  none_matcher.rs  not_matcher.rs  ok_matcher.rs  points_to_matcher.rs  pointwise_matcher.rs  predicate_matcher.rs  property_matcher.rs  (+6 more)
googletest/tests/: contains_exactly_matcher_test.rs  displays_as_inside_result_test.rs  elements_are_matcher_test.rs  field_matcher_test.rs  iter_over_owned_container_test.rs  lib.rs  matches_pattern_test.rs  no_color_test.rs  property_matcher_test.rs  proptest_integration_test.rs  tuple_matcher_test.rs  unordered_elements_are_matcher_test.rs
googletest_macro/: Cargo.toml
googletest_macro/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: assert_predicate_with_failure.rs  assertion_failure_in_subroutine.rs  assertion_failures_with_short_structured_actual_values.rs  async_test_with_expect_that.rs  custom_error_message.rs  expect_pred_failure.rs  expect_that_failure.rs  failure_due_to_fail_macro.rs  failure_due_to_fail_macro_with_empty_message.rs  failure_due_to_fail_macro_with_format_arguments.rs  fatal_and_non_fatal_failure.rs  first_failure_aborts.rs  google_test_with_rstest.rs  integration_tests.rs  non_fatal_failure_in_subroutine.rs  passing_test_with_should_panic.rs  simple_assertion_failure.rs  simple_assertion_failure_with_assert_that.rs  test_returning_anyhow_error.rs  two_expect_pred_failures.rs  two_expect_that_failures.rs  two_non_fatal_failures.rs  verify_predicate_with_failure.rs  verify_predicate_with_failure_as_method_in_submodule.rs
integration_tests/: Cargo.toml
integration_tests/src/: assert_predicate_with_failure.rs  assertion_failure_in_subroutine.rs  assertion_failures_with_short_structured_actual_values.rs  async_test_with_expect_that.rs  custom_error_message.rs  expect_pred_failure.rs  expect_that_failure.rs  failure_due_to_fail_macro.rs  failure_due_to_fail_macro_with_empty_message.rs  failure_due_to_fail_macro_with_format_arguments.rs  failure_due_to_returned_error.rs  fatal_and_non_fatal_failure.rs  first_failure_aborts.rs  google_test_with_rstest.rs  integration_tests.rs  non_fatal_failure_in_subroutine.rs  passing_test_with_should_panic.rs  simple_assertion_failure.rs  simple_assertion_failure_with_assert_that.rs  test_assert_on_anyhow_source.rs  test_returning_anyhow_error.rs  two_expect_pred_failures.rs  two_expect_that_failures.rs  two_non_fatal_failures.rs  verify_predicate_with_failure.rs  verify_predicate_with_failure_as_method_in_submodule.rs
test-that/: Cargo.toml  crate_docs.md
test-that-macro/: Cargo.toml  README.md
test-that-macro/src/: lib.rs
test-that/src/: assertions.rs  compat.rs  description.rs  lib.rs  matcher.rs  matchers.rs  result.rs
test-that/src/internal/: description_renderer.rs  source_location.rs  test_outcome.rs
test-that/src/matcher_support/: edit_distance.rs  summarize_diff.rs
test-that/src/matchers/: all_matcher.rs  any_matcher.rs  anything_matcher.rs  char_count_matcher.rs  conjunction_matcher.rs  container_contains_ordered_matcher.rs  container_contains_unordered_matcher.rs  container_eq_matcher.rs  containers.rs  contains_matcher.rs  contains_regex_matcher.rs  disjunction_matcher.rs  display_matcher.rs  each_matcher.rs  empty_matcher.rs  eq_deref_of_matcher.rs  eq_matcher.rs  err_matcher.rs  field_matcher.rs  ge_matcher.rs  gt_matcher.rs  has_entry_matcher.rs  in_range_matcher.rs  is_encoded_string_matcher.rs  is_finite_matcher.rs  is_infinite_matcher.rs  is_matcher.rs  is_nan_matcher.rs  le_matcher.rs  len_matcher.rs  lt_matcher.rs  matches_pattern.rs  matches_regex_matcher.rs  mod.rs  near_matcher.rs  none_matcher.rs  not_matcher.rs  ok_matcher.rs  points_to_matcher.rs  pointwise_matcher.rs  (+8 more)
test-that/src/matchers/containers/: container_contains.rs  container_contains_ordered_matcher.rs  container_contains_unordered_matcher.rs  container_eq_matcher.rs  contains_matcher.rs  each_matcher.rs  empty_matcher.rs  len_matcher.rs  pointwise_matcher.rs  subset_of_matcher.rs  superset_of_matcher.rs
test-that/src/matchers/containers/container_contains/: ordered_matcher.rs  unordered_matcher.rs
test-that/tests/: all_matcher_test.rs  any_matcher_test.rs  colorized_diff_test.rs  composition_test.rs  container_contains_ordered_matcher_test.rs  container_contains_unordered_matcher_test.rs  contains_exactly_matcher_test.rs  displays_as_inside_result_test.rs  field_matcher_test.rs  iter_over_owned_container_test.rs  matcher_composition_test.rs  matches_pattern_test.rs  no_color_test.rs  pointwise_matcher_test.rs  property_matcher_test.rs  proptest_integration_test.rs  result_of_matcher_test.rs  tuple_matcher_test.rs
