# Copyright 2022 Google LLC
# Copyright 2026 Bradford Hovinen <bradford@hovinen.me>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "test-that-macro"
version = "0.5.0"
keywords = ["unit", "matcher", "testing", "assertions"]
categories = ["development-tools", "development-tools::testing"]
description = "Procedural macros for test-that"
repository = "https://github.com/hovinen/test-that"
license = "Apache-2.0"
edition = "2021"
authors = [
  "Bradford Hovinen <bradford@hovinen.me>",
]

[dependencies]
quote = "1.0.46"
syn = {version = "2.0.118", features = ["full"]}

[dev-dependencies]
test-that = { path = "../test-that" }

[lib]
name = "test_that_macro"
proc-macro = true
