# Copyright 2022 Google LLC
# Copyright 2026 Bradford Hovinen <bradford@hovinen.me>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "test-that"
version = "0.3.0"
keywords = ["unit", "matcher", "testing", "assertions"]
categories = ["development-tools", "development-tools::testing"]
description = "A rich assertion and matcher library based on GoogleTest"
repository = "https://github.com/hovinen/test-that"
readme = "../README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0"
authors = [
  "Bradford Hovinen <bradford@hovinen.me>",
  "Bastien Jacot-Guillarmod <bjacotg@google.com>",
  "Maciej Pietrzak <mpi@google.com>",
  "Martin Geisler <mgeisler@google.com>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["regex", "num-traits", "non-fatal-assertions", "std"]
non-fatal-assertions = ["test-that-macro", "std"]
std = []
googletest-compat = []
googletest-migrate = ["googletest-compat"]

[dependencies]
test-that-macro = { path = "../test-that-macro", version = "0.3.0", optional = true }
anyhow = { version = "1", optional = true }
num-traits = { version = "0.2.17", optional = true }
proptest = { version = "1.11.0", optional = true }
regex = { version = "1.12.3", optional = true }

[dev-dependencies]
indoc = "2"
quickcheck = "1.0.3"
serial_test = "3.4.0"
temp-env = "0.3.6"
